solucion link de imagen

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <h3 class="relevamiento_index">
             Relevamiento
           </h3>
-          <img src="multimedia/Relevamiento.jpeg" alt="imagen de relevamiento"
+          <img src="./Multimedia/relevamiento.jpeg" alt="imagen de relevamiento"
             class="contenedor_fotoderelevamiento img-rounded">
           <p class="texto_relevamiento">
             Relevamientos con el mejor instrumental.
@@ -84,7 +84,7 @@
 
         <div class="contenedor_replanteo">
           <h2 class="contenedor_subtitulo_replanteo">Replanteo</h2>
-          <img src="multimedia/replanteo.jpg" alt="imagen de replanteo" class="contenedor_foto_replanteo img-rounded">
+          <img src="./Multimedia/replanteo.jpg" alt="imagen de replanteo" class="contenedor_foto_replanteo img-rounded">
           <p class="contenedor_textorelevamientourbano">
             Replanteos urbanos y rurales para todo tipo de obras y control de movimiento de suelo
           </p>
@@ -95,7 +95,7 @@
 
         <div class="contenedor_inspeccion">
           <h2 class="contenedor_subtitulo_inspeccion">Inspección</h2>
-          <img src="multimedia/deslinde.jpg" alt="imagen deslinde" class="contenedor_foto_inspeccion img-rounder">
+          <img src="./Multimedia/deslinde.jpg" alt="imagen deslinde" class="contenedor_foto_inspeccion img-rounder">
           <p class="contenedor_textoinspeccion">Inspección de obra. Nos involucramos mano a mano con el topografo
             encargado asegurando la calidad
             del trabajo
@@ -105,7 +105,7 @@
         <div class="index_video">
           <h2 class="contendedor_subtitulo_drone">Drone</h2>
           <video controls class="video_index">
-            <source src="multimedia/video.mp4" type="video/mp4" alt="video_de_drone">
+            <source src="./Multimedia/video.mp4" type="video/mp4" alt="video_de_drone">
           </video>
           <p class="contenedortexto_video">Levantamientos urbanos, semiurbanos o rurales, empleado fotogrametria aerea
             mediante drones o
