--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
     <h3 class="texto_footer">
       Seguinos en nuestras Redes!!</h3>
     <ul>
-      <li><a href="https://web.whatsapp.com/" target="_blank"><img src="multimedia/Whatsapp.ico" alt="whatsapp-logo"
+      <li><a href="https://web.whatsapp.com/" target="_blank"><img src="./Multimedia/whatsapp.ico" alt="whatsapp-logo"
             class="logo1"></a>
       </li>
 
-      <li><a href="https://www.facebook.com/" target="_blank"><img src="multimedia/facebook.ico" alt="facebook-logo"
+      <li><a href="https://www.facebook.com/" target="_blank"><img src="./Multimedia/facebook.ico" alt="facebook-logo"
             class="logo1"></a>
       </li>
 
-      <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"><img src="multimedia/instagram.ico"
+      <li><a href="https://www.instagram.com/?hl=es-la" target="_blank"><img src="./Multimedia/instagram.ico"
             class="logo1" alt="instafram-logo"></a></li>
     </ul>
 
